--- a/SVS-Season-Modifier.UI/Views/MainWindow.axaml
+++ b/SVS-Season-Modifier.UI/Views/MainWindow.axaml
@@ -14,7 +14,18 @@
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
         <vm:MainWindowViewModel/>
     </Design.DataContext>
-
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    
+    <StackPanel Orientation="Horizontal">
+        <ListBox ItemsSource="{Binding SaveFiles}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <DockPanel>
+                        <TextBlock DockPanel.Dock="Left" Text="{Binding Name}"/>
+                        <Button DockPanel.Dock="Right">Select</Button>
+                    </DockPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+    </StackPanel>
 
 </Window>
