--- a/SVS-Season-Modifier.UI/Views/MainWindow.axaml
+++ b/SVS-Season-Modifier.UI/Views/MainWindow.axaml
@@ -7,7 +7,7 @@
         x:Class="SVS_Season_Modifier.UI.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
-        Title="SVS Season Modifier">
+        Title="SV Save Editor">
 
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
@@ -39,18 +39,14 @@
         <DockPanel>
             <TextBlock DockPanel.Dock="Bottom" Margin="8" Text="{Binding Status}"/>
             <StackPanel Orientation="Vertical" Margin="16">
-                <TextBlock Margin="0, 8" Text="{Binding Selected.Name, StringFormat='Farm: {0}'}"/>
-                <TextBlock Margin="0, 8" Text="{Binding Selected.Farmer, StringFormat='Farmer: {0}'}"/>
-                <TextBlock Margin="0, 8" Text="Current In-Game Season:"/>
+                <TextBlock Margin="0, 8" Text="Farm Name:"/>
+                <TextBox Margin="0, 8" Text="{Binding Selected.Name}"/>
+                <TextBlock Margin="0, 8" Text="Farmer Name:"/>
+                <TextBox Margin="0, 8" Text="{Binding Selected.Farmer}"/>
+                <TextBlock Margin="0, 8" Text="Money:"/>
+                <TextBox Margin="0, 8" Text="{Binding Selected.Money}"/>
+                <TextBlock Margin="0, 8" Text="Season:"/>
                 <ComboBox ItemsSource="{Binding Seasons}" SelectedIndex="{Binding Selected.CurSeason}">
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding }"/>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </ComboBox>
-                <TextBlock Margin="0, 8" Text="Current Calendar Season:"/>
-                <ComboBox ItemsSource="{Binding Seasons}" SelectedIndex="{Binding Selected.CurSeasonByDay}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding }"/>
